<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"

    android:layout_margin="10dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorSecondaryBackground"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@drawable/background_rounded"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signInEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/signInEmailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:textColorHint="@color/black"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/SignInPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/signInPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryBackground"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryBackground"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password" />

        <TextView
            android:id="@+id/signInErrorView"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/error_view" />

        <Button
            android:id="@+id/verifyEmailAgainButton"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryBackground"
            android:layout_height="wrap_content"
            android:text="@string/email_verify_again" />

    </LinearLayout>

</LinearLayout>
