<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@drawable/background"

    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        app:cardBackgroundColor="@color/colorSecondaryBackground"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@drawable/background_rounded"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/fpEmailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/enterEmailId"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/fpEmailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_domain_com"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryBackground"
        android:text="@string/reset_password" />

</LinearLayout>