<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@drawable/background"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        app:cardBackgroundColor="@color/colorSecondaryBackground"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@drawable/background_rounded"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signUpEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/signUpEmailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/SignUpPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/signUpPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:targetApi="o" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/agreementCheckbox"
                android:onClick="linklatamsrc"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:textColor="@color/colorPrimary"
                android:buttonTint="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:onClick="linklatamsrc"
                android:textColor="@color/colorAccent"
                android:text="@string/TandC"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:textColor="@color/colorSecondaryBackground"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/signUpErrorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_view" />

    </LinearLayout>


</LinearLayout>
