<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activitysplashscreenConstraintLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
<androidx.cardview.widget.CardView
    android:layout_width="fill_parent"
    app:cardBackgroundColor="@color/colorSecondaryBackground"

    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="fill_parent"
    android:background="@drawable/background_rounded"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/signUpPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black" />
</LinearLayout>

</androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/waveHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:fitsSystemWindows="true"
            app:mwhCloseColor="#FF5F009F"
            app:mwhIsRunning="true"
            app:mwhStartColor="#FF5F009F" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_splash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/splash"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/iconlatam" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/s_h_spl_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/welcomeSignInButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="12dp"
                            android:text="@string/sign_in"
                            android:textColor="@color/colorPrimaryBackground" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <Button
                            android:id="@+id/welcomeSignUpButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/sign_up"
                            android:textColor="@color/colorPrimaryBackground" />
                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>

